syntax = "proto3";

package go_to_byte.dousheng.video;
option go_package="github.com/Go-To-Byte/DouSheng/apps/video";

import "common/pb/common.proto";
import "apps/user/pb/user.proto";

// 定义 Video 模块接口
service Service {
  // 视频 feed 流
  rpc FeedVideos(FeedVideosRequest) returns (FeedSetResponse);
  // 视频发布
  rpc PublishVideo(PublishVideoRequest) returns (common.CodeAndMsgResponse);
  // 用户发布视频的列表
  rpc PublishList(common.UserIDAndTokenRequest) returns (PublishListResponse);
}

message Video {
  //视频唯一标识
  // @gotags: json:"id"
  int64 id = 1;
  // 视频作者信息
  // @gotags: json:"author"
  user.User author = 2;
  // 视频播放地址
  // @gotags: json:"play_url"
  string play_url = 3;
  // 视频封面地址
  // @gotags: json:"cover_url"
  string cover_url = 4;
  // 视频的点赞总数
  // @gotags: json:"favorite_count"
  int64 favorite_count = 5;
  // 视频的评论总数
  // @gotags: json:"comment_count"
  int64 comment_count = 6;
  // true-已点赞,false-未点赞
  // @gotags: json:"is_favorite"
  bool is_favorite = 7;
  // 视频标题
  // @gotags: json:"title"
  string title = 8;
}

message FeedVideosRequest {
  // 分页参数
  // @gotags: json:"page"
  common.PageRequest page = 1;
  // 可选参数，限制返回视频的最新投稿时间戳，精确到秒，不填表示当前时间
  // @gotags: json:"latest_time"
  optional int64 latest_time = 2;
  // 可选参数，登录用户设置
  // @gotags: json:"token"
  optional string token = 3;
}

message PublishVideoRequest {
  // 用户鉴权token
  // @gotags: json:"token" validate:"token"
  string token = 1;
  // 视频数据
  // @gotags: json:"data" validate:"data"
  bytes data = 2;
  // 视频标题
  // @gotags: json:"title" validate:"title"
  string title = 3;
}

message FeedSetResponse {
  // 状态码，0-成功， 其他值-失败
  // @gotags: json:"status_code"
  int32 status_code = 1;
  // 返回状态描述信息
  // @gotags: json:"status_msg"
  optional string status_msg = 2;
  // 视频列表
  // @gotags: json:"video_list"
  repeated Video video_list = 3;
  // 本次返回的视频中，发布最早的时间，作为下次请求的latest_time
  // @gotags: json:"next_time"
  optional int64 next_time = 4;
}

message PublishListResponse {
  // 状态码,0-成功,其其他值-失败
  // @gotags: json:"status_code"
  int32 status_code = 1;
  // 返回状态描述
  // @gotags: json:"status_msg"
  optional string status_msg = 2;
  //用户发布的视频列表
  // @gotags: json:"video_list"
  repeated Video video_list = 3;
}


