syntax = "proto3";

package go_to_byte.dousheng.common;
option go_package="github.com/Go-To-Byte/DouSheng/common";

// HTTP响应的基础信息【在这里面的接口不可以用。。。】
message Response {
  // 状态码，0-成功， 其他值-失败
  // @gotags: json:"status_code"
  int32 status_code = 1;
  // 返回状态描述信息
  // @gotags: json:"status_msg"
  optional string status_msg = 2;
}

// 分页请求参数
message PageRequest {
  uint64 page_size = 1;
  uint64 page_number = 2;
  int64 offset = 3;
}

// UserID & Token 的 model
message UserIDAndTokenRequest {
  // 用户ID
  // @gotags: json:"user_id" validate:"required"
  int64 user_id = 1;
  // 用户鉴权Token
  // @gotags: json:"token" validate:"required"
  string token = 2;
}

// StatusCode & StatusMsg 的model
message CodeAndMsgResponse {
  // 状态码，0-成功， 其他值-失败
  // @gotags: json:"status_code"
  int32 status_code = 1;
  // 返回状态描述信息
  // @gotags: json:"status_msg"
  optional string status_msg = 2;
}
